--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -44,7 +44,7 @@
 	<p>In the novel, the main character's struggles to do good in the world are thwarted by structures instituted to keep anything from changing, everything in its place. He eventually aligns himself, not with elitist intellectuals or charismatic politicians, but with the invisible, those who tip-toe precariously at the periphery of our society.</p>
 	<p>We are asking participants to read out loud and record as much or as little of the book as they want in a show of solidarity with the invisible. Through the voice, may we collectively enact a visibility.</p>
 	<br/>
-	<p><b>Contribute</b> <ul><li>Find text that has not yet been recorded by selecting the text (if text is crossed out, then it has already been recorded).</li> <li>Record the text on an iphone, portable recorder, or straight into your computer.</li> <li>Click <i>upload</i> and follow the instructions.</li></ul>
+	<p><b>Contribute</b> <ul><li>Click <i>Contribute</i>.</li><li>Choose a section of text that has not been recorded.</li> <li>Record the text on an iphone, portable recorder, or straight into your computer.</li><li>Upload file.</li></ul>
 </div>
 <div id="book">
     {% for chunk in work.chunk_set.all %}
