--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -29,10 +29,14 @@
 </div>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
 <div id="menu">
-	<a id="play" href="">Play</a>
+	<a id="play" href="">Listen</a>
     <a id="pause" href="">Pause</a>    
 	<a id="upload" href="">Contribute</a>
-	<a id="info" href="">Info</a>
+	<a id="info" href="">Description</a>
+</div>
+<div id="contribute">
+<div id="close"><a href="" /></a></div>
+<div style="clear:both">Select a segment of text that you would like to read aloud. Speak as clearly as possible and record it on a sound recorder, smart phone, or directly into your computer.</div>
 </div>
 <div id="about">
 	<div id="close"><a href="" /></a></div>
