--- a/interface/apps/audiobook/templates/index.html
+++ b/interface/apps/audiobook/templates/index.html
@@ -36,7 +36,7 @@
 </div>
 <div id="contribute">
 <div id="close"><a href="" /></a></div>
-<div style="clear:both">Select a segment of text that you would like to read aloud. Speak as clearly as possible and record it on a sound recorder, smart phone, or directly into your computer.</div>
+<div style="clear:both">Select a segment of text that you would like to read aloud (scroll down for more text). Speak as clearly as possible and record it on a sound recorder, smart phone, or directly into your computer.</div>
 </div>
 <div id="about">
 	<div id="close"><a href="" /></a></div>
