--- a/interface/apps/audiobook/templates/base.html
+++ b/interface/apps/audiobook/templates/base.html
@@ -29,6 +29,19 @@
 	<script type="text/javascript" src="{{ STATIC_URL }}js/lib.js"></script>
 	<script type="text/javascript" src="{{ STATIC_URL }}js/site.js"></script>
 
-	{% block extra_js %}{% endblock %}	    
+    {% if GOOGLE_ANALYTICS_KEY %}
+    <script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', '{{ GOOGLE_ANALYTICS_KEY }}', 'invisiblelibrary.us');
+	  ga('send', 'pageview');
+
+	</script>
+    {% endif %}
+
+	{% block extra_js %}{% endblock %}
 </body>
 </html>
